--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
         <title>Rock Paper Scissors</title>
     </head>
     <body>
+        <button>Rock</button>
+        <button>Paper</button>
+        <button>Scissors</button>
+        <div class="container"></div>
         <script src="./script.js"></script>
     </body>
 </html>
