Style and script updates
Added rematch button with its corresponding style
Modified script for new button and added styling via javascript for result text
Added minor styling changes to the page

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <div>Player: <span class="score__player">0</span></div>
                 <div>Computer: <span class="score__computer">0</span></div>
             </div>
+            <button class="btn-reset">Rematch</button>
         </div>
         <script src="./script.js"></script>
     </body>
